# ZoKrates

./: Cargo.toml  Makefile
zokrates_baseline_zkp_wrapper/: Cargo.toml
zokrates_baseline_zkp_wrapper/src/: lib.rs
zokrates_core/: build.rs
zokrates_js/: package-lock.json  package.json  tsconfig.cjs.json  tsconfig.json  webpack.config.js
